[package]
name = "arb"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
  "libs/arb_proto",
  "libs/arb_core",
]

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"

[[bin]]
name="client"
path="src/bin/tcp_client.rs"

[[bin]]
name="server"
path="src/bin/tcp_server.rs"